# prismtoolbox

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api_index/: index.html
cli/preprocessing/: index.html
config/: default_contour_config.yaml  default_contouring.yaml  default_patch_config.yaml  default_patching.yaml
docs/: api_index.md  index.md
docs/cli/: preprocessing.md
internal_tests/: test_WSI.py
reference/SUMMARY/: index.html
reference/prismtoolbox/: index.html
reference/prismtoolbox/nucleiseg/: index.html
reference/prismtoolbox/nucleiseg/models/: index.html
reference/prismtoolbox/nucleiseg/models/sop/: index.html
reference/prismtoolbox/nucleiseg/seg_utils/: index.html
reference/prismtoolbox/nucleiseg/segmenter/: index.html
reference/prismtoolbox/utils/: index.html
reference/prismtoolbox/utils/data_utils/: index.html
reference/prismtoolbox/utils/qupath_utils/: index.html
reference/prismtoolbox/utils/stain_utils/: index.html
reference/prismtoolbox/utils/torch_utils/: index.html
reference/prismtoolbox/utils/vis_utils/: index.html
reference/prismtoolbox/wsicore/: index.html
reference/prismtoolbox/wsicore/core_utils/: index.html
reference/prismtoolbox/wsicore/wsi/: index.html
reference/prismtoolbox/wsiemb/: index.html
reference/prismtoolbox/wsiemb/emb_utils/: index.html
reference/prismtoolbox/wsiemb/embedder/: index.html
reference/prismtoolbox/wsiemb/models/: index.html
reference/prismtoolbox/wsiemb/processing/: index.html
scripts/mkdocs/: gen_ref_pages.py
search/: search_index.json
src/prismtoolbox/: __init__.py
src/prismtoolbox/cli/: main.py  preprocessing.py  utils.py
src/prismtoolbox/nucleiseg/: __init__.py  seg_utils.py  segmenter.py
src/prismtoolbox/nucleiseg/models/: __init__.py
src/prismtoolbox/utils/: data_utils.py  qupath_utils.py  stain_utils.py  torch_utils.py  vis_utils.py
src/prismtoolbox/wsicore/: __init__.py  core_utils.py  wsi.py
src/prismtoolbox/wsiemb/: __init__.py  emb_utils.py  embedder.py  processing.py
src/prismtoolbox/wsiemb/models/: __init__.py  clam.py  generic.py  pathoduet.py  phikon.py  utils.py
tests/: _utils.py  test_emb.py  test_wsi.py
(+24 files in other folders)
